[gd_scene load_steps=40 format=2]

[ext_resource path="res://characters/hero.gd" type="Script" id=1]
[ext_resource path="res://images/characters/charwalk.png" type="Texture" id=2]
[ext_resource path="res://characters/BlinkPlayer.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.43265
height = 7.40039

[sub_resource type="Animation" id=2]
resource_name = "Hurt"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.996078, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 5, 9, 13 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 7, 11, 15 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Stunned"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 6, 10, 14 ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 8, 12 ]
}

[sub_resource type="AnimationNodeBlend2" id=12]

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Walk"

[sub_resource type="AnimationNodeBlendTree" id=15]
nodes/Blend2/node = SubResource( 12 )
nodes/Blend2/position = Vector2( 600, 20 )
nodes/hurt/node = SubResource( 13 )
nodes/hurt/position = Vector2( 420, 140 )
nodes/move/node = SubResource( 14 )
nodes/move/position = Vector2( 420, 20 )
nodes/output/position = Vector2( 820, 60 )
node_connections = [ "output", 0, "Blend2", "Blend2", 0, "move", "Blend2", 1, "hurt" ]

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Stunned"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "LeftWalk"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "RightWalk"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Walk"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "UpWalk"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=35]
states/Hurt/node = SubResource( 15 )
states/Hurt/position = Vector2( 824, 187 )
states/Idle/node = SubResource( 20 )
states/Idle/position = Vector2( 377, 162 )
states/Stunned/node = SubResource( 21 )
states/Stunned/position = Vector2( 382, 44 )
states/Walk/node = SubResource( 26 )
states/Walk/position = Vector2( 824, 44 )
transitions = [ "Walk", "Stunned", SubResource( 27 ), "Idle", "Walk", SubResource( 28 ), "Walk", "Idle", SubResource( 29 ), "Idle", "Stunned", SubResource( 30 ), "Stunned", "Idle", SubResource( 31 ), "Idle", "Hurt", SubResource( 32 ), "Walk", "Hurt", SubResource( 33 ), "Hurt", "Walk", SubResource( 34 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=36]

[node name="hero" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.49012e-08, 0 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/IdleLeft = SubResource( 4 )
anims/IdleRight = SubResource( 5 )
anims/IdleUp = SubResource( 6 )
anims/LeftWalk = SubResource( 7 )
anims/RightWalk = SubResource( 8 )
anims/Stunned = SubResource( 9 )
anims/UpWalk = SubResource( 10 )
anims/Walk = SubResource( 11 )

[node name="AnimTr" type="AnimationTree" parent="."]
tree_root = SubResource( 35 )
anim_player = NodePath("../Anim")
parameters/playback = SubResource( 36 )
parameters/Hurt/Blend2/blend_amount = 0.5
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="plName" type="Label" parent="."]
margin_left = -19.7357
margin_top = -38.5007
margin_right = 20.2643
margin_bottom = -24.5007
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = -14.7353
margin_top = -24.794
margin_right = 12.2647
margin_bottom = -10.794
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_timer" type="Timer" parent="."]
autostart = true

[node name="bomb_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="BlinkPlayer" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="bomb_timer" to="." method="_on_bomb_timer_timeout"]
